force-app/main/default/objects/Score_Sheet__c/fields/ApplicantName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantName__c</fullName>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>