force-app/main/default/objects/Score_Sheet__c/fields/AwardedPointsForBudget__c.field-meta.xml
<CustomField>
    <fullName>AwardedPointsForBudget__c</fullName>
    <label>Awarded Points For Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>