force-app/main/default/objects/Score_Sheet__c/fields/AwardedPointsForTechnicalProposal__c.field-meta.xml
<CustomField>
    <fullName>AwardedPointsForTechnicalProposal__c</fullName>
    <label>Awarded Points For Technical Proposal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>