force-app/main/default/objects/Score_Sheet__c/fields/CommentForStrategyImplementationPlan__c.field-meta.xml
<CustomField>
    <fullName>CommentForStrategyImplementationPlan__c</fullName>
    <label>Comment for Strategy Implementation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>