force-app/main/default/objects/Score_Sheet__c/fields/CommentsForBudgetSubmission__c.field-meta.xml
<CustomField>
    <fullName>CommentsForBudgetSubmission__c</fullName>
    <label>Comments for Budget Submission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>