force-app/main/default/objects/Score_Sheet__c/fields/CommentsForCapacityAndCompetencies__c.field-meta.xml
<CustomField>
    <fullName>CommentsForCapacityAndCompetencies__c</fullName>
    <label>Comments for Capacity and Competencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>