force-app/main/default/objects/Score_Sheet__c/fields/CommentsForItemsInProposedBudget__c.field-meta.xml
<CustomField>
    <fullName>CommentsForItemsInProposedBudget__c</fullName>
    <label>Comments for Items in Proposed Budget</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>