force-app/main/default/objects/Score_Sheet__c/fields/CommentsOnStatementOfNeed__c.field-meta.xml
<CustomField>
    <fullName>CommentsOnStatementOfNeed__c</fullName>
    <label>Comments on Statement of Need</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>