force-app/main/default/objects/Score_Sheet__c/fields/EvaluatorSName__c.field-meta.xml
<CustomField>
    <fullName>EvaluatorSName__c</fullName>
    <label>Evaluator’s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>