force-app/main/default/objects/Score_Sheet__c/fields/EvaluatorSSignature__c.field-meta.xml
<CustomField>
    <fullName>EvaluatorSSignature__c</fullName>
    <label>Evaluator’s Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>