force-app/main/default/objects/Score_Sheet__c/fields/Funding_Application__c.field-meta.xml
<CustomField>
    <fullName>Funding_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Application</label>
    <referenceTo>Funding_Application__c</referenceTo>
    <relationshipLabel>Score Sheets</relationshipLabel>
    <relationshipName>Score_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>