force-app/main/default/objects/Score_Sheet__c/fields/PointsForQualificationsAndExperience__c.field-meta.xml
<CustomField>
    <fullName>PointsForQualificationsAndExperience__c</fullName>
    <label>Points For Qualifications and Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>