force-app/main/default/objects/Score_Sheet__c/fields/TotalPointsAwarded__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsAwarded__c</fullName>
    <label>Total Points Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>