force-app/main/default/objects/Score_Sheet__c/validationRules/points_greater_15.validationRule-meta.xml
<ValidationRule>
    <fullName>points_greater_15</fullName>
    <active>true</active>
    <description>Points shouldn&apos;t be greater than 15</description>
    <errorConditionFormula>PointsForQualificationsAndExperience__c &lt; 15</errorConditionFormula>
    <errorDisplayField>PointsForQualificationsAndExperience__c</errorDisplayField>
    <errorMessage>Points shouldn&apos;t be greater than 15</errorMessage>
</ValidationRule>