force-app/main/default/objects/Score_Sheet__c/validationRules/points_greater_25.validationRule-meta.xml
<ValidationRule>
    <fullName>points_greater_25</fullName>
    <active>true</active>
    <description>Points shouldn&apos;t be greater than 25</description>
    <errorConditionFormula>AwardedPointsForTechnicalProposal__c &lt; 25</errorConditionFormula>
    <errorDisplayField>AwardedPointsForTechnicalProposal__c</errorDisplayField>
    <errorMessage>Points shouldn&apos;t be greater than 25</errorMessage>
</ValidationRule>